--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
 </head>
 
 <body>
+  <!-- Header -->
+  <header>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">НЛК</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Портфолио</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Рейтинг</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Помощь</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+  </header>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
