--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
     </nav>
   </header>
 
+  <div class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-6 col-md-11 col-lg-7">
+          <h1 class="display-4">Портфолио</h1>
+          <p> Это место, где собраны ваши научные публикации. Здесь вы можете добавлять свои научные работы, получать
+            информацию об их уникальности и смотреть отзывы ваших научных руководителей.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Добавить работу</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
