add info section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,46 @@
     </div>
   </div>
 
+  <div class="info">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-xs-6 col-md-7 col-lg-5">
+          <div class="card">
+            <div class="card-header">
+              Ваш профиль
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Сергей Павлович Фролов</h5>
+              <p class="card-text">
+                <b>Научная степень</b>: Магистр.<br />
+                <b>Специализация</b>: Инвестиционные проблемы экономически развивающихся рынков.
+              </p>
+              <a href="#" class="btn btn-primary">Редактировать</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xs-6 col-md-5 col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              Статистика
+            </div>
+            <div class="card-body">
+              <p class="card-text">
+                <b>На платформе</b>: 2 года.<br />
+                <b>Добавлено работ</b>: 10.<br />
+                <b>Средняя уникальность</b>: 75%.<br />
+                <b>Язык работ</b>: русский, английский.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
