--- a/index.html
+++ b/index.html
@@ -92,6 +92,93 @@
     </div>
   </div>
 
+  <div class="articles mt-4 mb-5">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+
+          <div class="table-responsive-sm">
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th scope="col">Название работы</th>
+                  <th scope="col">Дата загрузки</th>
+                  <th scope="col">Научный руководитель</th>
+                  <th scope="col">Уникальность</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a class="links" href="#">Привлечение инвестиций как фактор развития экономики</a></td>
+                  <td>21.05.2019</td>
+                  <td><a class="links" href="#">Асаншоева А.М.</a></td>
+                  <td><a class="links" href="#">89%</a></td>
+                </tr>
+                <tr>
+                  <td><a class="links" href="#">The role of accounting in sustainable development</a></td>
+                  <td>11.02.2019</td>
+                  <td><a class="links" href="#">Шаляпина В.С.</a></td>
+                  <td><a class="links" href="#">78%</a></td>
+                </tr>
+                <tr>
+                  <td><a class="links" href="#">Сценарный анализ как инструмент учета рисков инвестиционного проекта</a>
+                  </td>
+                  <td>05.09.2018</td>
+                  <td><a class="links" href="#">Васильев М.Г.</a></td>
+                  <td><a class="links" href="#">67%</a></td>
+                </tr>
+                <tr>
+                  <td><a class="links" href="#">Глобальные и региональные инвестиционные тенденции</a></td>
+                  <td>09.07.2018</td>
+                  <td><a class="links" href="#">Асаншоева А.М.</a></td>
+                  <td><a class="links" href="#">73%</a></td>
+                </tr>
+                <tr>
+                  <td><a class="links" href="#">Systemic risks in financial markets</a></td>
+                  <td>18.05.2018</td>
+                  <td><a class="links" href="#">Леонидов В.Б.</a></td>
+                  <td><a class="links" href="#">77%</a></td>
+                </tr>
+                <tr>
+                  <td><a class="links" href="#">The influence of tax regulation liberalisation on the domestic debt
+                      market</a></td>
+                  <td>09.03.2018</td>
+                  <td><a class="links" href="#">Шаляпина В.С.</a></td>
+                  <td><a class="links" href="#">82%</a></td>
+                </tr>
+                <tr>
+                  <td><a class="links" href="#">Биткоин как новый вид инвестиций</a></td>
+                  <td>29.01.2018</td>
+                  <td><a class="links" href="#">Асаншоева А.М.</a></td>
+                  <td><a class="links" href="#">71%</a></td>
+                </tr>
+                <tr>
+                  <td><a class="links" href="#">Проблема воспроизводства жилищного фонда в России</a></td>
+                  <td>08.11.2017</td>
+                  <td><a class="links" href="#">Васильев М.Г.</a></td>
+                  <td><a class="links" href="#">65%</a></td>
+                </tr>
+                <tr>
+                  <td><a class="links" href="#">Влияние безработицы на экономику СНГ</a></td>
+                  <td>17.09.2017</td>
+                  <td><a class="links" href="#">Васильев М.Г.</a></td>
+                  <td><a class="links" href="#">68%</a></td>
+                </tr>
+                <tr>
+                  <td><a class="links" href="#">Мировой валютный рынок Форекс</a></td>
+                  <td>02.07.2017</td>
+                  <td><a class="links" href="#">Васильев М.Г.</a></td>
+                  <td><a class="links" href="#">67%</a></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
