--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
     </div>
   </div>
 
+  <footer class="card-footer text-muted">
+    <span>© Научный личный кабинет. Все права защищены</span>
+  </footer>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
