--- a/index.html
+++ b/index.html
@@ -180,7 +180,13 @@
   </div>
 
   <footer class="card-footer text-muted">
-    <span>© Научный личный кабинет. Все права защищены</span>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <span>© Научный личный кабинет. Все права защищены</span>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
